hydro_lang/tests/compile-fail-stable/non_commutative_operator.rs
../compile-fail/non_commutative_operator.rs